# jarvis_test

jarvis/: pyproject.toml
jarvis/docs/: architecture.md  project_map.md
jarvis/src/agents/: __init__.py  executor.py  planner.py  task_context.py  task_graph.py
jarvis/src/app/: __init__.py  bootstrap.py  main.py
jarvis/src/brain/: __init__.py  orchestrator.py  router.py
jarvis/src/integrations/: __init__.py
jarvis/src/sessions/: __init__.py  history.py  manager.py
jarvis/src/shared/: __init__.py  config.py  errors.py  events.py  safety.py  types.py
jarvis/src/skills/: __init__.py  loader.py  manifests.py  runtime.py
jarvis/src/tools/: __init__.py  base.py  echo.py  permissions.py  registry.py
jarvis/src/voice/: __init__.py
jarvis/tests/: test_contracts.py  test_imports.py  test_stage2_flow.py
reference/1/: config.rs  intent.rs
reference/3/: skill.json
